--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,15 +1,29 @@
 {
   "ci": {
     "collect": {
-      "url": ["http://localhost:3000"],
+      "url": [
+        "http://localhost:3000",
+        "http://localhost:3000/login",
+        "http://localhost:3000/admin",
+        "http://localhost:3000/exchange"
+      ],
+      "startServerCommand": "npm run build && npm start",
       "numberOfRuns": 3,
       "settings": {
-        "chromeFlags": ["--headless", "--no-sandbox", "--disable-dev-shm-usage"],
-        "preset": "mobile",
+        "preset": "perf",
+        "chromeFlags": "--no-sandbox --disable-dev-shm-usage",
+        "emulatedFormFactor": "mobile",
         "throttling": {
           "rttMs": 150,
-          "throughputKbps": 1638.4,
+          "throughputKbps": 1600,
           "cpuSlowdownMultiplier": 4
+        },
+        "screenEmulation": {
+          "mobile": true,
+          "width": 375,
+          "height": 667,
+          "deviceScaleFactor": 2,
+          "disabled": false
         }
       }
     },
@@ -19,40 +33,77 @@
         "categories:accessibility": ["error", {"minScore": 0.9}],
         "categories:best-practices": ["error", {"minScore": 0.9}],
         "categories:seo": ["error", {"minScore": 0.9}],
-        "categories:pwa": ["error", {"minScore": 0.8}],
-        
-        "first-contentful-paint": ["error", {"maxNumericValue": 2000}],
-        "largest-contentful-paint": ["error", {"maxNumericValue": 2500}],
-        "interactive": ["error", {"maxNumericValue": 3000}],
-        "cumulative-layout-shift": ["error", {"maxNumericValue": 0.1}],
-        "total-blocking-time": ["error", {"maxNumericValue": 300}],
-        "first-meaningful-paint": ["error", {"maxNumericValue": 2000}],
-        "speed-index": ["error", {"maxNumericValue": 3000}],
-        
-        "uses-responsive-images": "error",
-        "offscreen-images": "error",
-        "render-blocking-resources": "error",
-        "unused-css-rules": "error",
-        "unused-javascript": "error",
-        "modern-image-formats": "error",
-        "uses-optimized-images": "error",
-        "uses-webp-images": "error",
-        "uses-text-compression": "error",
-        "efficient-animated-content": "error",
-        
-        "viewport": "error",
-        "without-javascript": "error",
-        "installable-manifest": "error",
-        "service-worker": "error",
-        "themed-omnibox": "error",
-        "content-width": "error",
-        "apple-touch-icon": "error",
-        "splash-screen": "error",
-        "maskable-icon": "error"
+        "categories:pwa": ["error", {"minScore": 0.9}],
+        "audits:largest-contentful-paint": ["error", {"maxNumericValue": 2500}],
+        "audits:first-contentful-paint": ["error", {"maxNumericValue": 1800}],
+        "audits:speed-index": ["error", {"maxNumericValue": 3000}],
+        "audits:interactive": ["error", {"maxNumericValue": 3000}],
+        "audits:cumulative-layout-shift": ["error", {"maxNumericValue": 0.1}],
+        "audits:total-blocking-time": ["error", {"maxNumericValue": 200}],
+        "audits:installable-manifest": "error",
+        "audits:splash-screen": "error",
+        "audits:themed-omnibox": "error",
+        "audits:content-width": "error",
+        "audits:viewport": "error",
+        "audits:apple-touch-icon": "error",
+        "audits:maskable-icon": "error",
+        "audits:service-worker": "error",
+        "audits:offline-start-url": "error",
+        "audits:works-offline": "error"
       }
     },
     "upload": {
-      "target": "temporary-public-storage"
+      "target": "lhci",
+      "serverBaseUrl": "https://lhci.example.com",
+      "token": "LHCI_TOKEN"
+    }
+  },
+  "networkProfiles": {
+    "3g-fast": {
+      "rttMs": 150,
+      "throughputKbps": 1600,
+      "cpuSlowdownMultiplier": 4
+    },
+    "3g-slow": {
+      "rttMs": 300,
+      "throughputKbps": 400,
+      "cpuSlowdownMultiplier": 4
+    },
+    "4g": {
+      "rttMs": 70,
+      "throughputKbps": 10000,
+      "cpuSlowdownMultiplier": 2
+    },
+    "edge": {
+      "rttMs": 840,
+      "throughputKbps": 240,
+      "cpuSlowdownMultiplier": 8
+    }
+  },
+  "mobileDevices": {
+    "iPhone12": {
+      "width": 390,
+      "height": 844,
+      "deviceScaleFactor": 3,
+      "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.0 Mobile/15E148 Safari/604.1"
+    },
+    "iPhone8": {
+      "width": 375,
+      "height": 667,
+      "deviceScaleFactor": 2,
+      "userAgent": "Mozilla/5.0 (iPhone; CPU iPhone OS 15_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.0 Mobile/15E148 Safari/604.1"
+    },
+    "GalaxyS20": {
+      "width": 360,
+      "height": 800,
+      "deviceScaleFactor": 3,
+      "userAgent": "Mozilla/5.0 (Linux; Android 11; SM-G980F) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/87.0.4280.141 Mobile Safari/537.36"
+    },
+    "iPadAir": {
+      "width": 820,
+      "height": 1180,
+      "deviceScaleFactor": 2,
+      "userAgent": "Mozilla/5.0 (iPad; CPU OS 15_0 like Mac OS X) AppleWebKit/605.1.15 (KHTML, like Gecko) Version/15.0 Mobile/15E148 Safari/604.1"
     }
   }
 } 
