--- a/package.json
+++ b/package.json
@@ -11,32 +11,33 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "next": "^15.0.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "firebase": "^10.7.1",
     "bcryptjs": "^2.4.3",
-    "jsonwebtoken": "^9.0.2",
     "date-fns": "^2.30.0",
     "date-fns-tz": "^2.0.0",
-    "firebase-admin": "^12.0.0"
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
+    "jsonwebtoken": "^9.0.2",
+    "next": "^15.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/jsonwebtoken": "^9.0.2",
-    "typescript": "^5.3.2",
-    "tailwindcss": "^3.3.6",
-    "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32",
-    "eslint": "^8.55.0",
-    "eslint-config-next": "^15.0.0",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
+    "autoprefixer": "^10.4.16",
+    "eslint": "^8.55.0",
+    "eslint-config-next": "^15.0.0",
+    "firebase-tools": "^13.18.0",
+    "postcss": "^8.4.32",
     "prettier": "^3.1.0",
-    "@tailwindcss/forms": "^0.5.7"
+    "tailwindcss": "^3.3.6",
+    "typescript": "^5.3.2"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -49,4 +50,4 @@
     "mobile-first",
     "financial-transfers"
   ]
-} 
+}
