fix: Resolve Firebase deployment issues in GitHub Actions
🛠️ Workflow Improvements:
- Add explicit Node.js setup with version 18 and npm caching
- Separate install and build steps for better debugging
- Move FIREBASE_CLI_EXPERIMENTS to deployment step (not build step)
- Add proper step names for better logging visibility

🔧 Configuration Fixes:
- Fix webframeworks experiment placement to resolve deployment conflicts
- Ensure environment variables are available during build phase
- Add Firebase emulator configuration for development consistency
- Update both merge and PR workflows with identical structure

✅ Verification:
- Local build tested and working (✓ Compiled successfully)
- All environment variables properly configured
- Service account authentication already set up via firebase init

This resolves the 'webframeworks experiment not enabled' error and
OAuth authentication issues seen in previous deployments.

--- a/firebase.json
+++ b/firebase.json
@@ -9,5 +9,10 @@
     "frameworksBackend": {
       "region": "europe-west1"
     }
+  },
+  "emulators": {
+    "hosting": {
+      "port": 5000
+    }
   }
 }
